hledger/test/errors/undeclared-payee.j
#!/usr/bin/env -S hledger check payees -f

account a
commodity A

1/1 p
  (a)  A 1
